src/auryn/codegen_java/snapshots/auryn__auryn__codegen_java__class_generator__tests__arrays-3.snap
---
source: src/auryn/codegen_java/class_generator.rs
expression: "generate_classes(r#\"\n            // main\n            fn main() {\n                let a: []{a: I32, b: I32} = arrayOf({a: 5, b: 6})\n            }\n            \"#)"
---
Main:
ClassData
  this_class:		#22	Main
  super_class:		#26	java/lang/Object
Constant pool:
  #01 = Utf8			main$main
  #02 = Utf8			()V
  #03 = Utf8			[LStructural2$I32$I32;
  #04 = Class		#3	[LStructural2$I32$I32;
  #05 = Utf8			Structural2$I32$I32
  #06 = Class		#5	Structural2$I32$I32
  #07 = Integer			1
  #08 = Integer			0
  #09 = Integer			5
  #10 = Integer			6
  #11 = Utf8			<init>
  #12 = Utf8			(II)V
  #13 = NameAndType	#11:#12	<init>:(II)V
  #14 = MethodRef	#6.#13	Structural2$I32$I32:<init>:(II)V
  #15 = Utf8			Code
  #16 = Utf8			StackMapTable
  #17 = Utf8			main
  #18 = Utf8			([Ljava/lang/String;)V
  #19 = Utf8			[Ljava/lang/String;
  #20 = Class		#19	[Ljava/lang/String;
  #21 = Utf8			Main
  #22 = Class		#21	Main
  #23 = NameAndType	#1:#2	main$main:()V
  #24 = MethodRef	#22.#23	Main:main$main:()V
  #25 = Utf8			java/lang/Object
  #26 = Class		#25	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 8, locals = 2
       0: LoadConstant		#7	1
       2: ANewArray		#6	Structural2$I32$I32
       5: Dup
       6: LoadConstant		#8	0
       8: New			#6	Structural2$I32$I32
      11: Dup
      12: LoadConstant		#9	5
      14: LoadConstant		#10	6
      16: InvokeSpecial		#14	Structural2$I32$I32:<init>:(II)V
      19: AAStore
      20: AStore			0
      22: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 8, locals = 2
      0: InvokeStatic		#24	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}

-----

Structural2$I32$I32:
ClassData
  this_class:		#4	Structural2$I32$I32
  super_class:		#6	java/lang/Object
Constant pool:
  #01 = Utf8			<init>
  #02 = Utf8			(II)V
  #03 = Utf8			Structural2$I32$I32
  #04 = Class		#3	Structural2$I32$I32
  #05 = Utf8			java/lang/Object
  #06 = Class		#5	java/lang/Object
  #07 = Utf8			()V
  #08 = NameAndType	#1:#7	<init>:()V
  #09 = MethodRef	#6.#8	java/lang/Object:<init>:()V
  #10 = Utf8			a
  #11 = Utf8			I
  #12 = NameAndType	#10:#11	a:I
  #13 = FieldRef	#4.#12	Structural2$I32$I32.a:I
  #14 = Utf8			b
  #15 = NameAndType	#14:#11	b:I
  #16 = FieldRef	#4.#15	Structural2$I32$I32.b:I
  #17 = Utf8			Code
  #18 = Utf8			StackMapTable

{
  PUBLIC a: I

  PUBLIC b: I

  fn <init> {
    descriptor: (II)V
    flags: PUBLIC
    Code:
      stack = 8, locals = 4
       0: ALoad			0
       2: Dup
       3: InvokeSpecial		#9	java/lang/Object:<init>:()V
       6: Dup
       7: ILoad			1
       9: PutField		#13	Structural2$I32$I32.a:I
      12: ILoad			2
      14: PutField		#16	Structural2$I32$I32.b:I
      17: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ UninitializedThis,Integer,Integer ]
          Stack = [  ]
  }

}

-----
