src/auryn/codegen_java/snapshots/auryn__auryn__codegen_java__class_generator__tests__arrays.snap
---
source: src/auryn/codegen_java/class_generator.rs
expression: "generate_class_wrapped(\"let a: []I32 = arrayOfZeros(5)\")"
---
ClassData
  this_class:		#11	Main
  super_class:		#16	java/lang/Object
Constant pool:
  #01 = Utf8			[I
  #02 = Class		#1	[I
  #03 = Integer			5
  #04 = Utf8			main
  #05 = Utf8			()V
  #06 = Utf8			Code
  #07 = Utf8			StackMapTable
  #08 = Utf8			[Ljava/lang/String;
  #09 = Class		#8	[Ljava/lang/String;
  #10 = Utf8			Main
  #11 = Class		#10	Main
  #12 = NameAndType	#4:#5	main:()V
  #13 = MethodRef	#11.#12	Main:main:()V
  #14 = Utf8			([Ljava/lang/String;)V
  #15 = Utf8			java/lang/Object
  #16 = Class		#15	java/lang/Object

{
  fn main {
    descriptor: ()V
    flags: 9
    Code:
      stack = 8, locals = 2
      0: LoadConstant		#3	5
      2: NewArray		Int
      4: AStore			0
      6: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: 9
    Code:
      stack = 8, locals = 2
      0: InvokeStatic		#13	Main:main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}
