src/auryn/codegen_java/snapshots/auryn__auryn__codegen_java__class_generator__tests__assignment-3.snap
---
source: src/auryn/codegen_java/class_generator.rs
expression: "generate_class_wrapped(\"let a = 7\\na = a * a\\nprint(a)\")"
---
ClassData {
    constant_pool: [
        Utf8(
            "java/io/PrintStream",
        ),
        Class {
            name_index: ConstantPoolIndex(
                1,
            ),
        },
        Integer {
            integer: 7,
        },
        Utf8(
            "java/lang/System",
        ),
        Class {
            name_index: ConstantPoolIndex(
                4,
            ),
        },
        Utf8(
            "out",
        ),
        Utf8(
            "Ljava/io/PrintStream;",
        ),
        NameAndType {
            name_index: ConstantPoolIndex(
                6,
            ),
            type_index: ConstantPoolIndex(
                7,
            ),
        },
        FieldRef {
            class_index: ConstantPoolIndex(
                5,
            ),
            name_and_type_index: ConstantPoolIndex(
                8,
            ),
        },
        Utf8(
            "println",
        ),
        Utf8(
            "(I)V",
        ),
        NameAndType {
            name_index: ConstantPoolIndex(
                10,
            ),
            type_index: ConstantPoolIndex(
                11,
            ),
        },
        MethodRef {
            class_index: ConstantPoolIndex(
                2,
            ),
            name_and_type_index: ConstantPoolIndex(
                12,
            ),
        },
        Utf8(
            "main",
        ),
        Utf8(
            "()V",
        ),
        Utf8(
            "Code",
        ),
        Utf8(
            "StackMapTable",
        ),
        Utf8(
            "[Ljava/lang/String;",
        ),
        Class {
            name_index: ConstantPoolIndex(
                18,
            ),
        },
        Utf8(
            "Main",
        ),
        Class {
            name_index: ConstantPoolIndex(
                20,
            ),
        },
        NameAndType {
            name_index: ConstantPoolIndex(
                14,
            ),
            type_index: ConstantPoolIndex(
                15,
            ),
        },
        MethodRef {
            class_index: ConstantPoolIndex(
                21,
            ),
            name_and_type_index: ConstantPoolIndex(
                22,
            ),
        },
        Utf8(
            "([Ljava/lang/String;)V",
        ),
        Utf8(
            "java/lang/Object",
        ),
        Class {
            name_index: ConstantPoolIndex(
                25,
            ),
        },
    ],
    this_class: ConstantPoolIndex(
        21,
    ),
    super_class: ConstantPoolIndex(
        26,
    ),
    methods: [
        Method {
            flags: 9,
            name_index: ConstantPoolIndex(
                14,
            ),
            descriptor_index: ConstantPoolIndex(
                15,
            ),
            attributes: [
                AttributeInfo {
                    name_index: ConstantPoolIndex(
                        16,
                    ),
                    attribute: Code(
                        CodeAttribute {
                            max_locals: 2,
                            code: [
                                Ldc(
                                    ConstantPoolIndex(
                                        3,
                                    ),
                                ),
                                IStore(
                                    0,
                                ),
                                ILoad(
                                    0,
                                ),
                                ILoad(
                                    0,
                                ),
                                IMul,
                                IStore(
                                    0,
                                ),
                                GetStatic(
                                    ConstantPoolIndex(
                                        9,
                                    ),
                                ),
                                ILoad(
                                    0,
                                ),
                                InvokeVirtual(
                                    ConstantPoolIndex(
                                        13,
                                    ),
                                ),
                                Return,
                            ],
                            attributes: [
                                AttributeInfo {
                                    name_index: ConstantPoolIndex(
                                        17,
                                    ),
                                    attribute: StackMapTable(
                                        StackMapTableAttribute {
                                            entries: [
                                                Full {
                                                    offset_delta: 0,
                                                    locals: [],
                                                    stack: [],
                                                },
                                            ],
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ],
        },
        Method {
            flags: 9,
            name_index: ConstantPoolIndex(
                14,
            ),
            descriptor_index: ConstantPoolIndex(
                24,
            ),
            attributes: [
                AttributeInfo {
                    name_index: ConstantPoolIndex(
                        16,
                    ),
                    attribute: Code(
                        CodeAttribute {
                            max_locals: 2,
                            code: [
                                InvokeStatic(
                                    ConstantPoolIndex(
                                        23,
                                    ),
                                ),
                                Return,
                            ],
                            attributes: [
                                AttributeInfo {
                                    name_index: ConstantPoolIndex(
                                        17,
                                    ),
                                    attribute: StackMapTable(
                                        StackMapTableAttribute {
                                            entries: [
                                                Full {
                                                    offset_delta: 0,
                                                    locals: [
                                                        Object {
                                                            constant_pool_index: ConstantPoolIndex(
                                                                19,
                                                            ),
                                                        },
                                                    ],
                                                    stack: [],
                                                },
                                            ],
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ],
        },
    ],
}
