src/auryn/codegen_java/snapshots/auryn__auryn__codegen_java__class_generator__tests__conversions-2.snap
---
source: src/auryn/codegen_java/class_generator.rs
expression: "generate_class_wrapped(\"let a: I64 = 5\\nlet b: I32 = cast(a)\")"
---
ClassData
  this_class:		#12	Main
  super_class:		#16	java/lang/Object
Constant pool:
  #01 = Utf8			main$main
  #02 = Utf8			()V
  #03 = Long			5
  #05 = Utf8			Code
  #06 = Utf8			StackMapTable
  #07 = Utf8			main
  #08 = Utf8			([Ljava/lang/String;)V
  #09 = Utf8			[Ljava/lang/String;
  #10 = Class		#9	[Ljava/lang/String;
  #11 = Utf8			Main
  #12 = Class		#11	Main
  #13 = NameAndType	#1:#2	main$main:()V
  #14 = MethodRef	#12.#13	Main:main$main:()V
  #15 = Utf8			java/lang/Object
  #16 = Class		#15	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 8, locals = 4
       0: Ldc2W			#3	5
       3: LStore		0
       5: LLoad			0
       7: L2I
       8: IStore			2
      10: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 8, locals = 2
      0: InvokeStatic		#14	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}
