src/auryn/codegen_java/snapshots/auryn__auryn__codegen_java__class_generator__tests__externs.snap
---
source: src/auryn/codegen_java/class_generator.rs
expression: "generate_class(r#\"\n            unsafe extern \"java\" {\n                [\"java/io/PrintStream\"]\n                type PrintStream {}\n\n                [\"java/lang/System\"]\n                type System {\n                    [\"out\"]\n                    static let out: PrintStream\n                }\n            }\n            fn main() { System.out }\n            \"#)"
---
ClassData
  this_class:		#18	Main
  super_class:		#22	java/lang/Object
Constant pool:
  #01 = Utf8			main$main
  #02 = Utf8			()V
  #03 = Utf8			java/io/PrintStream
  #04 = Class		#3	java/io/PrintStream
  #05 = Utf8			java/lang/System
  #06 = Class		#5	java/lang/System
  #07 = Utf8			out
  #08 = Utf8			Ljava/io/PrintStream;
  #09 = NameAndType	#7:#8	out:Ljava/io/PrintStream;
  #10 = FieldRef	#6.#9	java/lang/System.out:Ljava/io/PrintStream;
  #11 = Utf8			Code
  #12 = Utf8			StackMapTable
  #13 = Utf8			main
  #14 = Utf8			([Ljava/lang/String;)V
  #15 = Utf8			[Ljava/lang/String;
  #16 = Class		#15	[Ljava/lang/String;
  #17 = Utf8			Main
  #18 = Class		#17	Main
  #19 = NameAndType	#1:#2	main$main:()V
  #20 = MethodRef	#18.#19	Main:main$main:()V
  #21 = Utf8			java/lang/Object
  #22 = Class		#21	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 1, locals = 1
      0: GetStatic		#10	java/lang/System.out:Ljava/io/PrintStream;
      3: Pop
      4: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#20	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}
