src/auryn/codegen_java/snapshots/auryn__auryn__codegen_java__class_generator__tests__function.snap
---
source: src/auryn/codegen_java/class_generator.rs
expression: "generate_class(\"fn main() { bar() }\\nfn bar() { print(1) }\")"
---
ClassData
  this_class:		#22	Main
  super_class:		#32	java/lang/Object
Constant pool:
  #01 = Utf8			java/io/PrintStream
  #02 = Class		#1	java/io/PrintStream
  #03 = Utf8			java/lang/String
  #04 = Class		#3	java/lang/String
  #05 = Utf8			java/lang/System
  #06 = Class		#5	java/lang/System
  #07 = Utf8			out
  #08 = Utf8			Ljava/io/PrintStream;
  #09 = NameAndType	#7:#8	out:Ljava/io/PrintStream;
  #10 = FieldRef	#6.#9	java/lang/System.out:Ljava/io/PrintStream;
  #11 = Utf8			1
  #12 = String		#11	1
  #13 = Utf8			println
  #14 = Utf8			(Ljava/lang/String;)V
  #15 = NameAndType	#13:#14	println:(Ljava/lang/String;)V
  #16 = MethodRef	#2.#15	java/io/PrintStream:println:(Ljava/lang/String;)V
  #17 = Utf8			bar
  #18 = Utf8			()V
  #19 = Utf8			Code
  #20 = Utf8			StackMapTable
  #21 = Utf8			Main
  #22 = Class		#21	Main
  #23 = NameAndType	#17:#18	bar:()V
  #24 = MethodRef	#22.#23	Main:bar:()V
  #25 = Utf8			main
  #26 = Utf8			[Ljava/lang/String;
  #27 = Class		#26	[Ljava/lang/String;
  #28 = NameAndType	#25:#18	main:()V
  #29 = MethodRef	#22.#28	Main:main:()V
  #30 = Utf8			([Ljava/lang/String;)V
  #31 = Utf8			java/lang/Object
  #32 = Class		#31	java/lang/Object

{
  fn bar {
    descriptor: ()V
    flags: 9
    Code:
      stack = 8, locals = 1
      0: GetStatic		#10	java/lang/System.out:Ljava/io/PrintStream;
      3: LoadConstant		#12	1
      5: InvokeVirtual		#16	java/io/PrintStream:println:(Ljava/lang/String;)V
      8: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ()V
    flags: 9
    Code:
      stack = 8, locals = 1
      0: InvokeStatic		#24	Main:bar:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: 9
    Code:
      stack = 8, locals = 2
      0: InvokeStatic		#29	Main:main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}
